# Xastir

./: .cvsignore  .dir-locals.el  .gitattributes  .gitignore  .travis.yml  .vimrc  AUTHORS  Aerial.geo  CONTRIBUTING  CONTRIBUTING.md  CanadaTopo250k.geo  CanadaTopo50k.geo  ChangeLog  Contours.geo  DEBUG_LEVELS  FAQ  Hydrography.geo  INSTALL  INSTALL.md  LICENSE  MIGRATION_PLAN.md  MIGRATION_PROGRESS.md  Makefile.am  Makefile.in  NEWS  NWSRadar_CONUS_CompositeRef.geo  NWSRadar_Hawaii_CompositeRef.geo  OSM_cloudmade_1.geo  OSM_cloudmade_2.geo  OSM_cloudmade_2.osm  OSM_cloudmade_5.geo  OSM_cloudmade_998.geo  OSM_cloudmade_999.geo  OSM_cloudmade_999.osm  OSM_cycle.geo  OSM_cycle.osm  OSM_mapnik.geo  OSM_mapnik.osm  OSM_osmarender.geo  OSM_skiing.geo  (+67 more)
Davis/: .cvsignore  AUTHORS  INSTALL  Makefile.am  README  bootstrap.sh  configure.ac
Davis/src/: .cvsignore  .vimrc  Makefile.am  db2APRS  db2APRS.c  defs.h
LaCrosse/: .cvsignore  AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.ac  weatherdump.sql
LaCrosse/autom4te.cache/: .cvsignore
LaCrosse/src/: .cvsignore  Makefile  Makefile.am  Makefile.in  defs.h  open2300db2APRS  open2300db2APRS.c  open2300db2APRS.c.bak
config/: .cvsignore  24kgrid.dbfawk  Makefile.am  Makefile.in  OSM_Cloudmade_administrative.dbfawk  OSM_Cloudmade_highway.dbfawk  OSM_Cloudmade_natural.dbfawk  OSM_Cloudmade_poi.dbfawk  OSM_Cloudmade_water_and_coastline.dbfawk  OSM_geofabrik_2026_buildings.dbfawk  OSM_geofabrik_2026_natural.dbfawk  OSM_geofabrik_2026_natural_and_water.dbfawk  OSM_geofabrik_2026_roads.dbfawk  OSM_geofabrik_2026_waterways.dbfawk  OSM_geofabrik_roads.dbfawk  OSM_geofabrik_waterways.dbfawk  arealm.dbfawk  areawater.dbfawk  cousub.dbfawk  cousub00.dbfawk  edge.dbfawk  featnames.dbfawk  gfe_coastal_waters.dbfawk  gfe_coastal_waters_warnings.dbfawk  gfe_fire_weather.dbfawk  gfe_metro_areas.dbfawk  gfe_public_weather.dbfawk  gps_wpt.dbfawk  language-Dutch.sys  language-ElmerFudd.sys  language-English.sys  language-French.sys  language-German.sys  language-Greek.sys  language-Italian.sys  language-MuppetsChef.sys  language-OldeEnglish.sys  language-PigLatin.sys  language-PirateEnglish.sys  language-Portuguese.sys  (+97 more)
help/: Makefile.am  Makefile.in
online-maps/: Makefile.am  NWSRadar_Alaska_CompositeRef.geo  National.geo  Regional.geo  WMS_USGS_ImageryOnly.geo  WMS_USGS_ShadedReliefOnly.geo  WMS_USGS_Topo.geo
scripts/: .cvsignore  BUILDRPMS  Coordinate.pm  LSB-BUILD  LSB-BUILD-ALL  LSB-BUILD-CURL  LSB-BUILD-DB  LSB-BUILD-GDAL  LSB-BUILD-GRAPHICSMAGICK  LSB-BUILD-JASPER  LSB-BUILD-JPEG  LSB-BUILD-LESSTIF  LSB-BUILD-PCRE  LSB-BUILD-PNG  LSB-BUILD-XPM  LSB-BUILD-ZLIB  Makefile.am  Makefile.in  PigLatin.pl  STABLE  UIView2XastirLog.pl  XastirGitStamp.sh  Xastir_tigerpoly.py  ads-b.pl  ais.pl  ais_pp.pl  coord-convert.pl  cvs2cl.pl  db_gis_mysql.sql  db_gis_postgis.sql  do_xastir_release_dev  do_xastir_release_stable  fcc-get  fcc-get.pl  geopdf2gtiff.pl  get-BOMdata  get-BOMdata.in  get-NWSdata  get-NWSdata.in  get-fcc-rac.pl  (+46 more)
src/: .cvsignore  LICENSE.geocoder  Makefile.am  Makefile.in  alert.c  alert.h  ambiguity_utils.c  ambiguity_utils.h  awk.c  awk.h  bulletin_controller.c  bulletin_controller.h  bulletin_gui.c  bulletin_gui.h  cad_objects.c  cad_objects.h  cairo_text.c  cairo_text.h  color.c  color.h  database.h  datum.c  datum.h  db.c  db.h  db_funcs.h  db_gis.c  db_gis.h  db_gui.c  db_gui.h  dbfawk.c  dbfawk.h  debug_utils.c  debug_utils.h  dlm.c  dlm.h  dr_utils.c  dr_utils.h  draw_symbols.c  draw_symbols.h  (+138 more)
src/Davis/: ChangeLog  INSTALL  Makefile.am  README  bootstrap.sh  config.h  configure.ac  db2APRS.c
src/callpass/: Makefile.am  Makefile.in  callpass.c
src/qt/: .cvsignore  build.sh  colors.cpp  colors.h  interfacecontroldialog.cpp  interfacecontroldialog.h  interfacecontroldialog.ui  interfacemanager.cpp  interfacemanager.h  listen_and_generate.pl  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_xastir.cpp  netinterface.cpp  netinterface.h  netinterfacepropertiesdialog.cpp  netinterfacepropertiesdialog.h  netinterfacepropertiesdialog.ui  packetinterface.cpp  packetinterface.h  qrc_xastir.cpp  stationconfigurationdialog.cpp  stationconfigurationdialog.h  stationconfigurationdialog.ui  stationsettings.cpp  stationsettings.h  symbols.cpp  symbols.h  ui_interfacecontroldialog.h  ui_mainwindow.h  ui_netinterfacepropertiesdialog.h  xastir-qt.pro  xastir.h  xastir.qrc
src/rtree/: Makefile.am  Makefile.in  card.c  card.h  gammavol.c  index.c  index.h  node.c  rect.c  sources.htm  sphvol.c  split_l.c  split_l.h  split_q.c  split_q.h
src/shapelib/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  Makefile_shapelib_orig  README  dbfadd.c  dbfcreate.c  dbfdump.c  dbfopen.c  libtool  makefile.vc  makeshape.sh  shapefil.h  shapelib.def  shpadd.c  shpcreate.c  shpdump.c  shpopen.c  shprewind  shprewind.c  shptest.c  shptree.c  shptreedump.c  shputils.c  (+4 more)
symbols/: 13pct.xbm  25pct.xbm  2x2.xbm  Makefile.am  Makefile.in  alert.xbm  flood.xbm  red_flag.xbm  snow.xbm  tornado.xbm  torndo.xbm  wind.xbm  winter_storm.xbm  winter_wx.xbm  wntr_strm.xbm
tests/: Makefile.am  atlocal.in  bulletin_controller_tests.at  db_tests.at  geocoder_controller_tests.at  interface_helpers.at  list_controller_tests.at  locate_controller_tests.at  location_controller_tests.at  mock_output_my_aprs_data.c  nominatim_tests.at  object_utils_tests.at  objects_tests.at  output_my_aprs_data_tests.at  package.m4  popup_controller_tests.at  test_bulletin_controller.c  test_db.c  test_db_stubs.c  test_framework.h  test_geocoder_controller.c  test_interface_helpers.c  test_list_controller.c  test_locate_controller.c  test_location_controller.c  test_nominatim.c  test_nominatim_stubs.c  test_object_utils.c  test_object_utils_stubs.c  test_objects.c  test_objects_stubs.c  test_output_my_aprs_data.c  test_popup_controller.c  test_track_controller.c  test_track_controller_stubs.c  test_util.c  test_util_stubs.c  test_view_message_controller.c  test_wx_controller.c  testsuite.at  (+4 more)
(+50 files in other folders)
